--- a/client/main.css
+++ b/client/main.css
@@ -26,14 +26,14 @@ li {
 .balloon5 .faceicon {
     float: left;
     margin-right: -90px;
-    width: 80px;
+    width: 32px;
 }
 
 .balloon5 .faceicon img{
     width: 100%;
     height: auto;
-    border: solid 3px #d7ebfe;
-    border-radius: 50%;
+    /*border: solid 3px #d7ebfe;
+    border-radius: 50%;*/
 }
 
 .balloon5 .chatting {
