--- a/client/main.css
+++ b/client/main.css
@@ -1,18 +1,3 @@
-/*
-Emoji Symbols Font (c)blockworks - Kenichi Kaneko
-http://emojisymbols.com/
-*/
-@font-face {
-  font-family: "EmojiSymbols";
-  src: url('../EmojiSymbols-Regular.woff') format('woff');
-  text-decoration: none;
-  font-style: normal;
-}
-.emj {
-  font-family: "EmojiSymbols";
-  line-height: 1;
-}
-
 /*吹き出し*/
 li {
   list-style:none;
@@ -34,6 +19,9 @@ li {
     height: auto;
     /*border: solid 3px #d7ebfe;
     border-radius: 50%;*/
+}
+.balloon5 .name {
+  text-align: center;
 }
 
 .balloon5 .chatting {
@@ -62,4 +50,77 @@ li {
 .says p {
     margin: 0;
     padding: 0;
+}
+
+
+
+/*--------------------
+ 吹き出しを作る
+--------------------*/
+/* 全体のスタイル */
+.kaiwa {
+  margin-bottom: 25px;
+}
+
+/* 左画像 */
+.kaiwa-img-left {
+  margin: 0;
+  float: left;
+  width: 32px;
+  height: 32px;
+  margin-top: 10px;
+  margin-right: -70px;
+}
+.kaiwa figure img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  margin: 0;
+}
+/* 画像の下のテキスト */
+.kaiwa-img-description {
+  padding: 15px 0 0;
+  font-size: 10px;
+  text-align: center;
+  position: relative;
+  bottom: 15px;
+}
+/* 左からの吹き出しテキスト */
+.kaiwa-text-right {
+  position: relative;
+  margin-left: 80px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #eee;
+  margin-right: 12%;
+  float: left;
+}
+
+p.kaiwa-text {
+  margin: 0 0 20px;
+}
+p.kaiwa-text:last-child {
+  margin-bottom: 0;
+}
+/* 左の三角形を作る */
+.kaiwa-text-right:before {
+  position: absolute;
+  content: '';
+  border: 10px solid transparent;
+  top: 15px;
+  left: -20px;
+}
+.kaiwa-text-right:after {
+  position: absolute;
+  content: '';
+  border: 10px solid transparent;
+  border-right: 10px solid #eee;
+  top: 15px;
+  left: -19px;
+}
+/* 回り込み解除 */
+.kaiwa:after,.kaiwa:before {
+  clear: both;
+  content: "";
+  display: block;
 }
